fix copilot issues
Signed-off-by: Andrew Fiddian-Green <software@whitebear.ch>